começando tela monitor

--- a/Frontend/src/pages/monitor/styles.css
+++ b/Frontend/src/pages/monitor/styles.css
@@ -1,1 +1,10 @@
-﻿
+﻿.monitor-container {
+    width: 100%;
+    max-width: 1120px;
+    height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    align-items: center; /*alinha verticalmente ao centro*/
+    justify-content: center; /*alinha horizontalmente ao centro*/
+
+}
