Paginação dos alunos tela monitor pt1

--- a/Frontend/src/pages/monitor/styles.css
+++ b/Frontend/src/pages/monitor/styles.css
@@ -8,3 +8,16 @@
     justify-content: center; /*alinha horizontalmente ao centro*/
 
 }
+
+.paginacao{
+    background: #C4C4C4;
+
+}
+.paginacao-item{
+
+}
+.paginacao .seta{
+    width: 54px;
+    height: 54px;
+}
+
