--- a/Frontend/src/global.css
+++ b/Frontend/src/global.css
@@ -43,6 +43,13 @@ form textarea{
 }
 
 
+.titlePage{
+  color: #41414d;
+  font-size: 32px;
+  font-family: 'Roboto';
+  margin: 10px;
+}
+
 .button{
   width: 100%;
   height: 60px;
@@ -83,4 +90,80 @@ form textarea{
   opacity: 0.8;
 }
 
+.main-container {
+  width: 100%;
+  max-width: 1180px;
+  padding: 0 30px;
+  margin:  32px auto;
 
+} 
+
+.main-container header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-container header span{
+  font-size: 20px;
+  margin-left: 24px;
+}
+
+.main-container header img{
+  height: 64px;
+}
+
+.main-container section h1{
+  margin-top: 80px;
+  margin-bottom: 24px;
+} 
+
+.main-container ul{
+  display: grid; 
+  grid-template-columns:  repeat(auto-fit,  minmax(320px, auto)); 
+  align-items: center;
+  list-style: none;  
+} 
+
+.main-container ul li{ 
+  max-width: 340px;
+  padding: 40px;
+  background: #fff;
+  box-shadow: 0 0 30px rgba(0,0,0, 0.2);
+  border-radius: 10px;
+  margin: 10px;
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.main-container ul li:hover{
+  box-shadow: 0 0 30px rgba(22,127,250, 0.3);
+}
+
+.main-container ul li span{
+  color: #41414d;
+  font-size: 18px;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 10px;
+}
+
+
+ 
+.link{
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  color: #41414d;
+  font-size: 22px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: opacity 0.2;
+}
+
+
+.link:hover{
+  opacity: 0.8;
+}
