--- a/Frontend/src/global.css
+++ b/Frontend/src/global.css
@@ -161,9 +161,22 @@ form textarea{
   text-decoration: none;
   font-weight: 500;
   transition: opacity 0.2;
+  background-color: #43A838;  
 }
 
 
 .link:hover{
   opacity: 0.8;
+}
+
+.linkButtonsItem{
+  background-color: #;
+  border-radius: 2px;
+  
+}
+
+.linkButtons{
+  align-items: center;
+  text-align: center;
+  
 }
