--- a/Frontend/src/global.css
+++ b/Frontend/src/global.css
@@ -47,9 +47,16 @@ form textarea{
   display: flex; 
   color: #41414d;
   font-size: 32px;
-  font-family: 'Roboto';
-  margin: 10px; 
+  font-family: 'Roboto'; 
 }
+
+.subtitle{
+  display: flex; 
+  color: #777;
+  font-size: 22px;
+  font-family: 'Roboto'; 
+}
+
 
 .backButton{
   margin-right: 15px;
@@ -100,7 +107,7 @@ form textarea{
   width: 100%;
   max-width: 1180px;
   padding: 0 30px;
-  margin:  32px auto;
+  margin:  0px auto;
 
 } 
 
@@ -108,6 +115,8 @@ form textarea{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 50px;
+  padding-top: 20px;
 }
 
 .main-container header span{
@@ -120,8 +129,8 @@ form textarea{
 }
 
 .main-container section h1{
-  margin-top: 80px;
-  margin-bottom: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 } 
 
 .main-container ul{
@@ -131,45 +140,25 @@ form textarea{
   list-style: none;  
 } 
 
-/* 
-.main-container ul li{ 
-  max-width: 340px;
-  padding: 40px;
-  background: #fff;
-  box-shadow: 0 0 30px rgba(0,0,0, 0.2);
-  border-radius: 10px;
-  margin: 10px;
-  display: flex; 
-  flex-direction: column;
+.selfCenter {
+  display: flex;
   justify-content: center;
-  align-items: center;
-} 
-
-.main-container ul li:hover{
-  box-shadow: 0 0 30px rgba(22,127,250, 0.3);
+  align-content: center;
+  width: 100%;
+  height: calc(100% - 35%);
 }
 
-.main-container ul li span{
-  color: #41414d;
-  font-size: 18px;
-  text-decoration: none;
-  font-weight: 500;
-  padding: 10px;
-} 
-*/
-
 .card{
-  max-width: 340px;
-  padding: 40px;
+  max-width: 340px;  
+  padding: 5px;
   background: #fff;
-  box-shadow: 0 0 30px rgba(0,0,0, 0.2);
-  border-radius: 10px;
-  margin: 10px;
-  display: flex; 
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 40px;
+  box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+  -webkit-box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+  -moz-box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+    border-radius: 10px;
+  margin: 10px; 
+  justify-items: center;
+  align-items: center; 
   color: #41414d;
   font-size: 22px;
   text-decoration: none;
@@ -178,17 +167,20 @@ form textarea{
 }
 
 .card:hover{
-  box-shadow: 0 0 30px rgba(22,127,250, 0.3);
+  box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363);
+  -webkit-box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363);
+  -moz-box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363); 
 }
  
 .card li{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-content: center;
   text-align: center;
-
+  padding: 10px;
 }
+
 .card li span{
   color: #41414d;
   font-size: 18px;
@@ -198,12 +190,11 @@ form textarea{
 } 
 
 .link{
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
+  display: flex; 
+  align-items: center !important; 
   color: #41414d;
   font-size: 22px;
-  text-decoration: none;
+  text-decoration: none !important;
   font-weight: 500;
   transition: opacity 0.2;
   /* background-color: #43A838;   */
@@ -220,3 +211,28 @@ form textarea{
   justify-content: center;
   align-items: center;
 }
+
+
+.tableCard{ 
+  padding: 0px;
+  background: #fff;
+  box-shadow: 0 0 30px rgba(0,0,0, 0.2);
+  border-radius: 10px;
+  margin: 10px;
+  display: flex; 
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  margin-top: 20px;  
+}
+
+.buttonAction{
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  width: 50px; 
+}
+
+
