--- a/Frontend/src/pages/diagnostic/styles.css
+++ b/Frontend/src/pages/diagnostic/styles.css
@@ -1,1 +1,57 @@
-﻿
+﻿.cardv2 { 
+  background: #fff;
+  box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+  -webkit-box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+  -moz-box-shadow: 6px 7px 9px -3px rgba(0,0,0,0.26);
+  border-radius: 10px;
+  margin: 10px; 
+  justify-items: center;
+  align-items: center;
+  margin-top: 20px; 
+  transition: opacity 0.2; 
+}
+
+
+.cardv2:hover{
+  box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363);
+  -webkit-box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363);
+  -moz-box-shadow: 6px 7px 9px -3px rgba(24, 118, 240, 0.363); 
+}
+
+.containerSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap; 
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: 10px;
+  white-space: nowrap;
+} 
+
+.radioPereido{    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100px;
+    width: 200px; 
+    justify-content: center;
+    align-items: center;
+    color: #41414d;
+    font-size: 16px;
+    font-family: 'Roboto'; 
+    word-wrap: break-word; 
+    text-align: center;
+}
+
+
+
+
+   
+
+.radioPereido input{
+    margin-bottom: 10px;
+}  
+ 
+.observation{
+  margin: 1px;
+}
