--- a/Frontend/src/pages/logon/styles.css
+++ b/Frontend/src/pages/logon/styles.css
@@ -13,8 +13,8 @@
 .logon-container .content{
     width: 100%;
     padding: 96px;
-    background: #f5f5f5;
-    box-shadow: 0 0 100px rgba(0,0,0, 0.1);
+    background: #fff;
+    box-shadow: 0 0 30px rgba(0,0,0, 0.1);
     border-radius:  8px;
     flex-direction: column;
     display: flex;
