--- a/Frontend/src/pages/monitor/styles.css
+++ b/Frontend/src/pages/monitor/styles.css
@@ -42,8 +42,14 @@
 
 .alunoSelected{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
+
+.perfilContainer{
+    margin: 2px auto;
+  }
 
 .cardAlunoContent {   
     display: flex;        
@@ -91,6 +97,25 @@
 }
 
 .chartContent {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    justify-items: center;
+    margin: 10px;
+}
+
+.chartHeader{
+    display: flex;
+    justify-content: center;
+
+    padding: 20px;
 }
   
+
+.chartContent span{
+    text-align: center;    
+    color: #777;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Roboto'; 
+} 
