--- a/Frontend/src/components/header.css
+++ b/Frontend/src/components/header.css
@@ -1,4 +1,4 @@
-﻿header{  
+﻿.headerCustom{  
     -webkit-box-shadow: 0px 4px 50px -35px rgba(0,0,0,0.54);
     -moz-box-shadow: 0px 4px 50px -35px rgba(0,0,0,0.54);
     box-shadow: 0px 4px 50px -35px rgba(0,0,0,0.54);
