--- a/Frontend/src/pages/monitor/styles.css
+++ b/Frontend/src/pages/monitor/styles.css
@@ -56,7 +56,7 @@
     justify-items: center;
     align-items: center; 
     background: #fff;
-    height: 80px;
+    height: 100px;
     margin: 10px 5px;
     padding: 10px;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
@@ -85,6 +85,7 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     border-radius: 5px;  
     cursor: pointer;
+    transform: scaleY(1.2);
 }
   
 
